tests/neg-custom-args/captures/widen-reach.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/widen-reach.scala:13:26 ----------------------------------
13 |  val y2: IO^ -> IO^ = y1.foo      // error
   |                       ^^^^^^
   |                       Found:    IO^ ->{x*} IO^{x*}
   |                       Required: IO^ -> (ex$6: caps.Exists) -> IO^{ex$6}
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/widen-reach.scala:14:30 ----------------------------------
14 |  val y3: IO^ -> IO^{x*} = y1.foo  // error
   |                           ^^^^^^
   |                           Found:    IO^ ->{x*} IO^{x*}
   |                           Required: IO^ -> IO^{x*}
   |
   | longer explanation available when compiling with `-explain`
-- Error: tests/neg-custom-args/captures/widen-reach.scala:8:18 --------------------------------------------------------
8 |trait Bar extends Foo[IO^]: // error
  |                  ^
  |                  IO^{ex$3} cannot be box-converted to box IO^
  |                  since at least one of their capture sets contains the root capability `cap`
9 |  val foo: IO^ -> IO^ = x => x
